Fixing BAAS link

--- a/examples/TranSMART Arborist.ipynb
+++ b/examples/TranSMART Arborist.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,20 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "study.validate_all()"
    ]
@@ -84,67 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cleaning up before closing...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"green\" style=\"font-family: monospace;\">&#x2705; [OKAY] Successfully closed The Arborist. The updated column mapping file has been returned as a dataframe.</font>"
-      ],
-      "text/plain": [
-       "\u001b[92m[OKAY] Successfully closed The Arborist. The updated column mapping file has been returned as a dataframe.\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"orange\" style=\"font-family: monospace;\">&#9888; [WARNING] Don't forget to save this dataframe to disk if you want to store it.</font>"
-      ],
-      "text/plain": [
-       "\u001b[93m[WARNING] Don't forget to save this dataframe to disk if you want to store it.\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"green\" style=\"font-family: monospace;\">&#x2705; [OKAY] Study metadata tags found.</font>"
-      ],
-      "text/plain": [
-       "\u001b[92m[OKAY] Study metadata tags found.\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] No changes found in any HighDim paths.</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] No changes found in any HighDim paths.\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "study.call_boris()"
    ]
@@ -158,416 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/cnv/acgh_subject_sample_mapping.tsv</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/cnv/acgh_subject_sample_mapping.tsv\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/cnv/acgh_data.tsv</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/cnv/acgh_data.tsv\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/clinical/ontology_mapping_file.txt</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/clinical/ontology_mapping_file.txt\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/clinical/Cell-line_wordmap.txt</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/clinical/Cell-line_wordmap.txt\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/rnaseq/rnaseq_subject_sample_mapping.tsv</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/rnaseq/rnaseq_subject_sample_mapping.tsv\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/tags/tags.txt</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/tags/tags.txt\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/rnaseq/rnaseq_data.tsv</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/rnaseq/rnaseq_data.tsv\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/proteomics/proteomics_subject_sample_mapping.txt</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/proteomics/proteomics_subject_sample_mapping.txt\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/expression/dataset1/subject_sample_mapping.tsv</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/expression/dataset1/subject_sample_mapping.tsv\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/expression/dataset2/subject_sample_mapping.tsv</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/expression/dataset2/subject_sample_mapping.tsv\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/expression/dataset1/data.tsv</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/expression/dataset1/data.tsv\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/expression/dataset2/data.tsv</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/expression/dataset2/data.tsv\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/clinical/Cell-line_columns.txt</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/clinical/Cell-line_columns.txt\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/clinical/Cell-line_clinical.txt</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/clinical/Cell-line_clinical.txt\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/clinical/modifiers_file.txt</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/clinical/modifiers_file.txt\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/cnv/acgh_annotation/chromosomal_regions.tsv</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/cnv/acgh_annotation/chromosomal_regions.tsv\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/clinical/trial_visits.tsv</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/clinical/trial_visits.tsv\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/proteomics/proteomics_data.txt</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/proteomics/proteomics_data.txt\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/proteomics/proteomics_annotation/proteomics_annotation.tsv</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/proteomics/proteomics_annotation/proteomics_annotation.tsv\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/rnaseq/rnaseq_annotation/chromosomal_regions.tsv</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/rnaseq/rnaseq_annotation/chromosomal_regions.tsv\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/GPL570_bogus/annotation/GPL570_simplified.tsv</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/GPL570_bogus/annotation/GPL570_simplified.tsv\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/rnaseq/rnaseq.params</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/rnaseq/rnaseq.params\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/expression/dataset2/expression.params</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/expression/dataset2/expression.params\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/study.params</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/study.params\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/proteomics/proteomics.params</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/proteomics/proteomics.params\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/GPL570_bogus/annotation/mrna_annotation.params</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/GPL570_bogus/annotation/mrna_annotation.params\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/rnaseq/rnaseq_annotation/rnaseq_annotation.params</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/rnaseq/rnaseq_annotation/rnaseq_annotation.params\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/cnv/acgh_annotation/cnv_annotation.params</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/cnv/acgh_annotation/cnv_annotation.params\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/tags/tags.params</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/tags/tags.params\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/clinical/clinical.params</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/clinical/clinical.params\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/cnv/cnv.params</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/cnv/cnv.params\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/proteomics/proteomics_annotation/proteomics_annotation.params</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/proteomics/proteomics_annotation/proteomics_annotation.params\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font color=\"black\" style=\"font-family: monospace;\"> [INFO] Writing file to /Users/jb/studies/updated_study/expression/dataset1/expression.params</font>"
-      ],
-      "text/plain": [
-       "\u001b[0m[INFO] Writing file to /Users/jb/studies/updated_study/expression/dataset1/expression.params\u001b[0m"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "StudyObject (/Users/jb/studies/updated_study)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "study.write_to('~/studies/updated_study')"
    ]
@@ -588,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study.publish_to_baas('arborist-test-trait.thehyve.net')"
+    "study.publish_to_baas('https://arborist-test-trait.thehyve.net')"
    ]
   },
   {
@@ -604,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study.update_from_baas('arborist-test-trait.thehyve.net/trees/valid-study/3/~edit')"
+    "study.update_from_baas('https://arborist-test-trait.thehyve.net/trees/valid-study/3/~edit')"
    ]
   },
   {
@@ -652,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
